--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,11 +9,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 7
       - uses: actions/setup-node@v3
         with:
-          node-version: 20.x
-          cache: "yarn"
+          node-version: 16.x
+          cache: "pnpm"
 
-      - run: yarn install --frozen-lockfile
-      - run: yarn lint && yarn build
+      - run: pnpm install --frozen-lockfile
+      - run: pnpm run lint && pnpm run build
