--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 	"types": "dist/index.d.ts",
 	"scripts": {
 		"build": "tsup index.ts --format cjs,esm --dts",
-		"release": "yarn build && changeset publish",
+		"release": "pnpm run build && changeset publish",
 		"lint": "tsc"
 	},
 	"devDependencies": {
