--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
 		"lint": "tsc"
 	},
 	"devDependencies": {
-		"@changesets/cli": "^2.26.0",
-		"tsup": "^6.5.0",
-		"typescript": "^5.2.2"
+		"@changesets/cli": "latest",
+		"tsup": "latest",
+		"typescript": "latest"
 	}
 }
