--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "transaction-exception",
+	"name": "@rsns-0/transaction-exception",
 	"version": "1.0.0",
 	"description": "Utility class which holds type information of the data object contained within an Exception. Useful for handling business logic related exceptions.",
 	"repository": "https://github.com/rsns-0/transaction-exception",
